# Hackathon-Scientific-Discovery

./: CLAUDE.md  README.md  pyproject.toml  setup-hooks.sh
Intro_slides/: Welcome.pptx
agents/ians-fake-team/: config.toml  my_run_agent.py
cloud_api/: __init__.py  auth.py  db.py  main.py  routes.py  schemas.py
docs/superpowers/plans/: 2026-04-21-hackathon-scientific-discovery.md
docs/superpowers/specs/: 2026-04-21-hackathon-scientific-discovery-design.md
examples/: call_llm_example.py
hackathon_science/: __init__.py  cache.py  cli.py  cloud_client.py  config.py  git_ops.py  models.py  runner.py  server.py  tools.py  tracker.py  utils.py
hackathon_science/templates/: run_agent_template.py  team_config_template.toml
infra/: .gitignore  README.md  cdk.context.json  cdk.json  deploy-spa.sh  package-lock.json  package.json  prune-cognito-users.sh
infra/docker/api/: Dockerfile  requirements.txt
infra/lib/: api-stack.ts  auth-stack.ts  data-stack.ts  network-stack.ts  web-stack.ts
scripts/dev/: README.md  docker-compose.yml  down.sh  up.sh
scripts/stress-test/: README.md  publish_papers.py
tests/: __init__.py  test_cache.py  test_cli.py  test_config.py  test_git_ops.py  test_models.py  test_runner.py  test_tools.py  test_tracker.py  test_utils.py
ui/: .env.example  index.html  package-lock.json  package.json
ui/public/reviews/: README.md  round-1.html  round-2.html  round-3.html
ui/src/: App.tsx  api.ts  auth.tsx  config.ts  eventGate.tsx  index.css  main.tsx  types.ts  vite-env.d.ts
ui/src/components/: NavBar.tsx
ui/src/pages/: Activity.tsx  (+6 more)
