[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "hackathon-science"
version = "0.1.0"
description = "A hackathon platform for collaborative AI-driven scientific discovery"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "boto3>=1.34",
    "pydantic>=2.0",
    "pydantic-monty>=0.0.17",
    "fastapi>=0.100",
    "uvicorn[standard]>=0.23",
    "pyyaml>=6.0",
    "gitpython>=3.1",
    "duckduckgo-search>=6.0",
    "click>=8.1",
    "toml>=0.10",
    "anthropic>=0.103.0",
    "transformers>=5.8.1",
    "datasets>=4.8.5",
    "scikit-learn>=1.8.0",
    "matplotlib>=3.10.9",
    "seaborn>=0.13.2",
    "pandas>=3.0.3",
    "openai>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "pytest-mock>=3.10",
]

[project.scripts]
hackathon = "hackathon_science.cli:main"
